--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <script src="script.js" defer></script>
     <title>Speed Typing</title>
   </head>
-  <body></body>
+  <body>
+    <div class="timer" id="time">0</div>
+    <div class="container">
+      <div class="quote-display" id="quote-display">quote</div>
+      <textarea id="quoteInput" class="quote-input" autofocus>quote</textarea>
+    </div>
+  </body>
 </html>
