--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="timer" id="time">0</div>
     <div class="container">
-      <div class="quote-display" id="quote-display">quote</div>
-      <textarea id="quoteInput" class="quote-input" autofocus>quote</textarea>
+      <div class="quoteDisplay" id="quote-display"></div>
+      <textarea id="quoteInput" class="quote-input" autofocus></textarea>
     </div>
   </body>
 </html>
